# feed_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  main.py  mix.exs  mypy.ini  pyproject.toml  requirements.txt
.github/: cicd.yml
.github/workflows/: cicd.yml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: feed_service.ex  feed_service_web.ex
lib/feed_service/: application.ex  cache.ex  release.ex  repo.ex
lib/feed_service/clients/: media_client.ex  profile_client.ex  project_client.ex
lib/feed_service/clients/profile_client/: behaviour.ex
lib/feed_service/events/: broadway.ex  schema.ex
lib/feed_service/events/handlers/: profile_handler.ex  project_handler.ex  response_handler.ex
lib/feed_service/feed/: cursor.ex  feed.ex  feed_item.ex  media_enrichment.ex  membership.ex  profile.ex  profile_enricher.ex  projector.ex  subscription.ex
lib/feed_service_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/feed_service_web/controllers/: error_json.ex
lib/feed_service_web/plugs/: require_user.ex  user_context.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20260503125909_create_feed_items.exs  20260503130802_create_subscriptions.exs  20260503130803_create_memberships.exs  20260503130804_create_profiles_cache.exs  20260602000000_widen_profiles_cache_avatar_url.exs  20260602000001_widen_feed_items_actor_avatar_url.exs  20260602100000_unique_source_in_feed_items.exs
test/: test_helper.exs
test/feed_service/feed/: profile_enricher_test.exs
test/feed_service_web/controllers/: error_json_test.exs
test/support/: conn_case.ex  data_case.ex
tests/: math.py  test_math.py
(+5 files in other folders)
